packages/fxa-content-server/app/styles/modules/_settings.scss
/* ... */
.settings-unit-stub {
  height: 35px;

  .settings-unit-summary {
    display: inline-block;
    margin-top: 2px;
    overflow: hidden;

    html[dir='ltr'] & {
      float: left;
    }

    html[dir='rtl'] & {
      float: right;
    }

    @include respond-to('big') {
      width: 350px;

      html[dir='ltr'] & {
        margin-right: 10px;
      }

      html[dir='rtl'] & {
        margin-left: 10px;
      }
    }

    @include respond-to('small') {
      width: 70%;

      html[dir='ltr'] & {
        margin-right: 1%;
      }

      html[dir='rtl'] & {
        margin-left: 1%;
      }
    }
  }

  .settings-unit-title {
    color: $text-color;
    line-height: 19px;
    margin: 0;

    @include respond-to('big') {
      font-size: $medium-font;
    }

    @include respond-to('small') {
      font-size: $base-font;
    }
  }

  .settings-unit-subtitle {
    color: $faint-text-color;
    font-size: $small-font;
    font-weight: normal;
    line-height: 16px;
    margin: 5px 0 0 0;
  }

  .settings-unit-title,
  .settings-unit-subtitle {
    overflow: hidden;
    text-overflow: ellipsis;
    text-wrap: nowrap;
    white-space: nowrap;
    width: 360px;
  }

  .settings-unit-title:only-child {
    line-height: 35px;
  }
}

.settings-unit-details {
  display: none;

  a {
    text-decoration: none;
  }

  p {
    color: $faint-text-color;
    margin: 6px 0 24px;
  }
}

.open .settings-unit-details {
  display: block;
}

.open .settings-unit-toggle,
.settings-button.settings-unit-loading {
  display: none;
}

.blocker {
  // Firefox 49 has an issue with z-index stacking
  // Update z-index of the jquery modal, see issue #4257
  z-index: 6;
}

section.modal-panel {
  .button-row {
    margin-bottom: 0;

    html[dir='ltr'] & {
      text-align: left;
    }

    html[dir='rtl'] & {
      text-align: right;
    }
  }

  .input-row {
    text-align: left;
  }
}

.client-list {
  padding: 0;
}

.client {
  // default client icon is desktop
  background-image: url('/images/icon-device-laptop.svg');
  background-repeat: no-repeat;
  background-size: 32px 32px;

  height: 40px;
  list-style: none;
  margin: 10px 0;
  position: relative;

  html[dir='ltr'] & {
    background-position: left 2px;
    padding-left: 40px;
  }

  html[dir='rtl'] & {
    background-position: right 2px;
    padding-right: 40px;
  }

  .client-name {
    line-height: 1.2;
    overflow: hidden;
    text-overflow: ellipsis;
    /*allows 5% gutter between device-name and .device-disconnected button*/
    /*reduce by 95px to accomodate the width of the .device-disconnected button*/
    white-space: nowrap;
    width: calc(95% - 95px);
  }

  .settings-button {
    height: 35px;
    /*minimum width required for the button to look good without occupying too much space*/
    /*is also the default computed width on desktop screen*/
    min-width: 100px;
    position: absolute;
    text-align: center;
    top: 0;
    width: 20%;

    html[dir='ltr'] & {
      right: 0;
    }

    html[dir='rtl'] & {
      left: 0;
    }
  }

  a.settings-button {
    padding-top: 8px;
  }

  .device-current {
    color: $color-green;
    font-size: 12px;
  }

  .last-connected {
    color: $color-grey;
    font-size: 12px;
  }

  &[data-os='Windows'] {
    background-image: url('/images/icon-device-laptop-windows.svg');
  }

  &[data-os='macOS'] {
    background-image: url('/images/icon-device-laptop-mac.svg');
  }

  &[data-os='Linux'] {
    background-image: url('/images/icon-device-laptop-linux.svg');
  }

}

.client.mobile {
  background-image: url('/images/icon-device-phone.svg');

  &[data-os='iOS'] {
    background-image: url('/images/icon-device-phone-iphone.svg');
  }

  &[data-os='Android'] {
    background-image: url('/images/icon-device-phone-android.svg');
  }

  &[data-os='Windows'] {
    background-image: url('/images/icon-device-phone-windows.svg');
  }
}

.client.tablet {
  background-image: url('/images/icon-device-tablet.svg');

  &[data-os='iOS'] {
    background-image: url('/images/icon-device-tablet-ipad.svg');
  }

  &[data-os='Android'] {
    background-image: url('/images/icon-device-tablet-android.svg');
  }
}

.client-device {
  &.client-current {
    background-position: left 5px;

  }
}

.client-oAuthApp {
  background-image: url('/images/icon-client-default.svg');

  &[data-name='Add-ons'],
  &[data-name='Firefox Add-ons Frontend'] {
    background-image: url('/images/icon-service-addon.svg');
  }

  &[data-name='Pocket'] {
    background-image: url('/images/icon-service-pocket.svg');
  }

  &[data-name='Firefox Notes'] {
    background-image: url('/images/icon-service-firefox-notes.svg');
  }

  &[data-name='Pontoon'] {
    background-image: url('/images/icon-service-pontoon.svg');
  }
}

.client-webSession {
  background-image: url('/images/icon-web-session.svg');
}

#client-disconnect {
  .intro {
    margin-bottom: 30px;
  }
}

.fxa-radio {

  html[dir='ltr'] & {
    text-align: left;
  }

  html[dir='rtl'] & {
    text-align: right;
  }

  label {
    display: block;
  }
}
/* ... */

